@@ -11,9 +11,10 @@ package org.andor.tests;
 import org.andor.core.BaseGame;
 import org.andor.core.Camera3D;
 import org.andor.core.Colour;
+import org.andor.core.Image;
+import org.andor.core.ImageLoader;
 import org.andor.core.Object3DBuilder;
 import org.andor.core.RenderableObject3D;
-import org.andor.core.Settings;
 import org.andor.utils.OpenGLUtils;
 
 public class Quad3DTest extends BaseGame {
@@ -24,6 +25,9 @@ public class Quad3DTest extends BaseGame {
 	/* The 3D Object */
 	public RenderableObject3D quad;
 	
+	/* The texture */
+	public Image texture;
+	
 	/* The constructor */
 	public Quad3DTest() {
 		
@@ -31,9 +35,16 @@ public class Quad3DTest extends BaseGame {
 	
 	/* The method called when the loop has been created */
 	public void create() {
+		//Create the camera and change its position
 		this.camera = new Camera3D();
-		quad = Object3DBuilder.createQuad(1, 1, new Colour[] { Colour.RED, Colour.GREEN, Colour.BLUE });
+		this.camera.position.z = -2;
+		//Create the quad and change its position
+		quad = Object3DBuilder.createTexturedQuad(1, 1, Colour.WHITE);
 		quad.position.z = -2;
+		//Load the texture and bind it
+		String texturePath = "C:/Grass_Side.png";
+		this.texture = ImageLoader.loadImage(texturePath, true);
+		this.texture.bind();
 	}
 	
 	/* The method called when the game loop has started */
@@ -48,12 +59,16 @@ public class Quad3DTest extends BaseGame {
 	
 	/* The method called when the game loop is rendered */
 	public void render() {
-		OpenGLUtils.setupPerspective(70, 1f, 1000f);
+		//Setup OpenGL
+		OpenGLUtils.setupPerspective(70f, 1f, 1000f);
 		OpenGLUtils.clearColourBuffer();
 		OpenGLUtils.clearDepthBuffer();
 		OpenGLUtils.enableDepthTest();
 		
+		//Use the camera's view on the world
 		this.camera.useView();
+		
+		//Render the quad
 		this.quad.render();
 	}
 	
@@ -69,7 +84,6 @@ public class Quad3DTest extends BaseGame {
 	
 	/* The main method */
 	public static void main(String[] args) {
-		Settings.Window.Fullscreen = true;
 		//Create a new instance of this test
 		new Quad3DTest();
 	}
