@@ -1,4 +1,14 @@
 ------------------------------------------------------
+Release 0 | Beta 0 | Development 2 | Experimental 3
+
+* Added Image
+* Added ImageLoader
+
+* Fixed bug: The width and height of the window was
+  set to 0 when not fullscreen, causing things not
+  to render
+
+------------------------------------------------------
 Release 0 | Beta 0 | Development 2 | Experimental 2
 
 * Added Object3DBuilder
